--- a/index.html
+++ b/index.html
@@ -8,15 +8,17 @@
   <meta name="CocoaVersion" content="1561.2">
   <style type="text/css">
     p.p1 {margin: 0.0px 0.0px 0.0px 80.0px; text-align: right; text-indent: -80.0px; line-height: 24.0px; font: 21.3px Times; color: #000000; -webkit-text-stroke: #000000}
-    p.p2 {margin: 0.0px 0.0px 0.0px 0.0px; text-align: center; line-height: 24.0px; font: 29.3px 'Songti TC'; color: #000000; -webkit-text-stroke: #000000}
-    p.p3 {margin: 0.0px 0.0px 0.0px 0.0px; text-align: center; line-height: 24.0px; font: 16.0px 'Songti TC'; color: #000000; -webkit-text-stroke: #000000}
-    p.p4 {margin: 0.0px 0.0px 0.0px 0.0px; text-align: center; line-height: 24.0px; font: 13.3px Times; color: #000000; -webkit-text-stroke: #000000}
-    p.p5 {margin: 0.0px 0.0px 0.0px 0.0px; line-height: 24.0px; font: 21.3px Times; color: #000000; -webkit-text-stroke: #000000}
+    p.p2 {margin: 0.0px 0.0px 0.0px 0.0px; text-align: center; line-height: 41.0px; font: 29.3px 'Songti TC'; color: #000000; -webkit-text-stroke: #000000}
+    p.p3 {margin: 0.0px 0.0px 0.0px 0.0px; text-align: center; line-height: 22.0px; font: 16.0px 'Songti TC'; color: #000000; -webkit-text-stroke: #000000}
+    p.p4 {margin: 0.0px 0.0px 0.0px 0.0px; text-align: center; line-height: 15.0px; font: 13.3px Times; color: #000000; -webkit-text-stroke: #000000}
+    p.p5 {margin: 0.0px 0.0px 0.0px 0.0px; text-align: center; line-height: 15.0px; font: 13.3px 'Songti TC'; color: #000000; -webkit-text-stroke: #000000}
+    p.p6 {margin: 0.0px 0.0px 0.0px 0.0px; line-height: 24.0px; font: 21.3px Times; color: #000000; -webkit-text-stroke: #000000}
     span.s1 {font-kerning: none}
     span.s2 {font: 29.3px Times; font-kerning: none}
+    span.s3 {font: 13.3px Times; font-kerning: none}
     table.t1 {border-collapse: collapse}
-    td.td1 {width: 679.6px; border-style: solid; border-width: 2.0px 2.0px 2.0px 2.0px; border-color: #000000 #000000 #000000 #000000; padding: 0.0px 1.9px 0.0px 1.9px}
-    td.td2 {width: 110.6px; border-style: solid; border-width: 0.0px 1.0px 2.0px 2.0px; border-color: #000000 #000000 #000000 #000000; padding: 0.0px 1.9px 0.0px 1.9px}
+    td.td1 {width: 680.0px; border-style: solid; border-width: 2.0px 2.0px 2.0px 2.0px; border-color: #000000 #000000 #000000 #000000; padding: 0.0px 1.9px 0.0px 1.9px}
+    td.td2 {width: 110.7px; border-style: solid; border-width: 0.0px 1.0px 2.0px 2.0px; border-color: #000000 #000000 #000000 #000000; padding: 0.0px 1.9px 0.0px 1.9px}
     td.td3 {width: 76.5px; border-style: solid; border-width: 0.0px 1.0px 2.0px 0.0px; border-color: #000000 #000000 #000000 #000000; padding: 0.0px 1.9px 0.0px 1.9px}
     td.td4 {width: 76.6px; border-style: solid; border-width: 0.0px 1.0px 2.0px 0.0px; border-color: #000000 #000000 #000000 #000000; padding: 0.0px 1.9px 0.0px 1.9px}
     td.td5 {width: 76.6px; background-color: #ffcc99; border-style: solid; border-width: 0.0px 1.0px 2.0px 0.0px; border-color: #000000 #000000 #000000 #000000; padding: 0.0px 1.9px 0.0px 1.9px}
@@ -45,7 +47,7 @@
   <tbody>
     <tr>
       <td colspan="9" valign="middle" class="td1">
-        <p class="p2"><span class="s1">空白課表</span><span class="s2">v3</span></p>
+        <p class="p2"><span class="s1">空白課表</span><span class="s2">v3.1</span></p>
       </td>
     </tr>
     <tr>
@@ -82,7 +84,7 @@
         <p class="p4"><span class="s1">07:10-08:00</span></p>
       </td>
       <td valign="middle" class="td9">
-        <p class="p4"><span class="s1"> </span></p>
+        <p class="p5"><span class="s3"> </span><span class="s1">公休</span></p>
       </td>
       <td valign="middle" class="td10">
         <p class="p4"><span class="s1"> </span></p>
@@ -511,6 +513,6 @@
     </tr>
   </tbody>
 </table>
-<p class="p5"><span class="s1"> </span></p>
+<p class="p6"><span class="s1"> </span></p>
 </body>
 </html>
