--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     span.s2 {font: 29.3px Times; font-kerning: none}
     span.s3 {font: 13.3px Times; font-kerning: none}
     table.t1 {border-collapse: collapse}
-    td.td1 {width: 680.0px; border-style: solid; border-width: 2.0px 2.0px 2.0px 2.0px; border-color: #000000 #000000 #000000 #000000; padding: 0.0px 1.9px 0.0px 1.9px}
+    td.td1 {width: 680.2px; border-style: solid; border-width: 2.0px 2.0px 2.0px 2.0px; border-color: #000000 #000000 #000000 #000000; padding: 0.0px 1.9px 0.0px 1.9px}
     td.td2 {width: 110.7px; border-style: solid; border-width: 0.0px 1.0px 2.0px 2.0px; border-color: #000000 #000000 #000000 #000000; padding: 0.0px 1.9px 0.0px 1.9px}
     td.td3 {width: 76.5px; border-style: solid; border-width: 0.0px 1.0px 2.0px 0.0px; border-color: #000000 #000000 #000000 #000000; padding: 0.0px 1.9px 0.0px 1.9px}
     td.td4 {width: 76.6px; border-style: solid; border-width: 0.0px 1.0px 2.0px 0.0px; border-color: #000000 #000000 #000000 #000000; padding: 0.0px 1.9px 0.0px 1.9px}
@@ -47,7 +47,7 @@
   <tbody>
     <tr>
       <td colspan="9" valign="middle" class="td1">
-        <p class="p2"><span class="s1">空白課表</span><span class="s2">v3.1</span></p>
+        <p class="p2"><span class="s1">空白課表</span><span class="s2">v3.2</span></p>
       </td>
     </tr>
     <tr>
@@ -229,7 +229,7 @@
         <p class="p4"><span class="s1">12:10-13:00</span></p>
       </td>
       <td valign="middle" class="td3">
-        <p class="p4"><span class="s1"> </span></p>
+        <p class="p5"><span class="s1">午睡</span><span class="s3"> </span></p>
       </td>
       <td valign="middle" class="td4">
         <p class="p4"><span class="s1"> </span></p>
