--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     span.s3 {font: 13.3px Times; font-kerning: none}
     table.t1 {border-collapse: collapse}
     td.td1 {width: 680.4px; border-style: solid; border-width: 2.0px 2.0px 2.0px 2.0px; border-color: #000000 #000000 #000000 #000000; padding: 0.0px 1.9px 0.0px 1.9px}
-    td.td2 {width: 110.7px; border-style: solid; border-width: 0.0px 1.0px 2.0px 2.0px; border-color: #000000 #000000 #000000 #000000; padding: 0.0px 1.9px 0.0px 1.9px}
+    td.td2 {width: 110.8px; border-style: solid; border-width: 0.0px 1.0px 2.0px 2.0px; border-color: #000000 #000000 #000000 #000000; padding: 0.0px 1.9px 0.0px 1.9px}
     td.td3 {width: 76.5px; border-style: solid; border-width: 0.0px 1.0px 2.0px 0.0px; border-color: #000000 #000000 #000000 #000000; padding: 0.0px 1.9px 0.0px 1.9px}
     td.td4 {width: 76.6px; border-style: solid; border-width: 0.0px 1.0px 2.0px 0.0px; border-color: #000000 #000000 #000000 #000000; padding: 0.0px 1.9px 0.0px 1.9px}
     td.td5 {width: 76.6px; background-color: #ffcc99; border-style: solid; border-width: 0.0px 1.0px 2.0px 0.0px; border-color: #000000 #000000 #000000 #000000; padding: 0.0px 1.9px 0.0px 1.9px}
@@ -48,7 +48,7 @@
   <tbody>
     <tr>
       <td colspan="9" valign="middle" class="td1">
-        <p class="p2"><span class="s2">課表</span><span class="s1">v4.0</span></p>
+        <p class="p2"><span class="s2">課表</span><span class="s1">v5.0</span></p>
       </td>
     </tr>
     <tr>
@@ -100,10 +100,10 @@
         <p class="p4"><span class="s1"> </span></p>
       </td>
       <td valign="middle" class="td11">
-        <p class="p4"><span class="s1"> </span></p>
+        <p class="p5"><span class="s3"> </span><span class="s1">假日</span></p>
       </td>
       <td valign="middle" class="td12">
-        <p class="p4"><span class="s1"> </span></p>
+        <p class="p5"><span class="s1">假日</span><span class="s3"> </span></p>
       </td>
     </tr>
     <tr>
