--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   <tbody>
     <tr>
       <td colspan="9" valign="middle" class="td1">
-        <p class="p2"><span class="s2">課表</span><span class="s1">v6.0</span></p>
+        <p class="p2"><span class="s2">課表</span><span class="s1">v7.0</span></p>
       </td>
     </tr>
     <tr>
@@ -100,7 +100,7 @@
         <p class="p4"><span class="s1"> </span></p>
       </td>
       <td valign="middle" class="td11">
-        <p class="p5"><span class="s3"> </span><span class="s1">假日</span></p>
+        <p class="p5"><span class="s3"> </span><span class="s1">加班</span></p>
       </td>
       <td valign="middle" class="td12">
         <p class="p6"><span class="s1">假日</span><span class="s3"> </span></p>
@@ -129,7 +129,7 @@
         <p class="p4"><span class="s1"> </span></p>
       </td>
       <td valign="middle" class="td11">
-        <p class="p4"><span class="s1"> </span></p>
+        <p class="p5"><span class="s3"> </span><span class="s1">加班</span></p>
       </td>
       <td valign="middle" class="td12">
         <p class="p4"><span class="s1"> </span></p>
@@ -158,7 +158,7 @@
         <p class="p4"><span class="s1"> </span></p>
       </td>
       <td valign="middle" class="td11">
-        <p class="p4"><span class="s1"> </span></p>
+        <p class="p5"><span class="s3"> </span><span class="s1">加班</span></p>
       </td>
       <td valign="middle" class="td12">
         <p class="p4"><span class="s1"> </span></p>
@@ -187,7 +187,7 @@
         <p class="p4"><span class="s1"> </span></p>
       </td>
       <td valign="middle" class="td11">
-        <p class="p4"><span class="s1"> </span></p>
+        <p class="p5"><span class="s3"> </span><span class="s1">加班</span></p>
       </td>
       <td valign="middle" class="td12">
         <p class="p4"><span class="s1"> </span></p>
@@ -216,7 +216,7 @@
         <p class="p4"><span class="s1"> </span></p>
       </td>
       <td valign="middle" class="td5">
-        <p class="p4"><span class="s1"> </span></p>
+        <p class="p5"><span class="s3"> </span><span class="s1">加班</span></p>
       </td>
       <td valign="middle" class="td6">
         <p class="p4"><span class="s1"> </span></p>
@@ -300,7 +300,7 @@
         <p class="p4"><span class="s1"> </span></p>
       </td>
       <td valign="middle" class="td9">
-        <p class="p5"><span class="s3"> </span><span class="s1">加班</span></p>
+        <p class="p5"><span class="s1">加班</span></p>
       </td>
       <td valign="middle" class="td11">
         <p class="p4"><span class="s1"> </span></p>
