--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   <tbody>
     <tr>
       <td colspan="9" valign="middle" class="td1">
-        <p class="p2"><span class="s2">課表</span><span class="s1">v7.0</span></p>
+        <p class="p2"><span class="s2">課表</span><span class="s1">v7.1</span></p>
       </td>
     </tr>
     <tr>
@@ -132,7 +132,7 @@
         <p class="p5"><span class="s3"> </span><span class="s1">加班</span></p>
       </td>
       <td valign="middle" class="td12">
-        <p class="p4"><span class="s1"> </span></p>
+        <p class="p5"><span class="s1">假日</span></p>
       </td>
     </tr>
     <tr>
@@ -161,7 +161,7 @@
         <p class="p5"><span class="s3"> </span><span class="s1">加班</span></p>
       </td>
       <td valign="middle" class="td12">
-        <p class="p4"><span class="s1"> </span></p>
+        <p class="p5"><span class="s1">好好休息</span><span class="s3"> </span></p>
       </td>
     </tr>
     <tr>
@@ -271,7 +271,7 @@
         <p class="p4"><span class="s1"> </span></p>
       </td>
       <td valign="middle" class="td9">
-        <p class="p5"><span class="s1">午睡</span><span class="s3"> </span></p>
+        <p class="p6"><span class="s1">午睡</span><span class="s3"> </span></p>
       </td>
       <td valign="middle" class="td11">
         <p class="p4"><span class="s1"> </span></p>
@@ -300,7 +300,7 @@
         <p class="p4"><span class="s1"> </span></p>
       </td>
       <td valign="middle" class="td9">
-        <p class="p5"><span class="s1">加班</span></p>
+        <p class="p6"><span class="s1">加班</span></p>
       </td>
       <td valign="middle" class="td11">
         <p class="p4"><span class="s1"> </span></p>
