--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   <tbody>
     <tr>
       <td colspan="9" valign="middle" class="td1">
-        <p class="p2"><span class="s2">課表</span><span class="s1">v7.1</span></p>
+        <p class="p2"><span class="s2">課表</span><span class="s1">v7.2</span></p>
       </td>
     </tr>
     <tr>
@@ -201,7 +201,7 @@
         <p class="p4"><span class="s1">11:10-12:00</span></p>
       </td>
       <td valign="middle" class="td3">
-        <p class="p4"><span class="s1"> </span></p>
+        <p class="p4"><span class="s1"> 123</span></p>
       </td>
       <td valign="middle" class="td4">
         <p class="p4"><span class="s1"> </span></p>
