--- a/class.html
+++ b/class.html
@@ -48,7 +48,7 @@
   <tbody>
     <tr>
       <td colspan="9" valign="middle" class="td1">
-        <p class="p2"><span class="s2">課表</span><span class="s1">v9.0</span></p>
+        <p class="p2"><span class="s2">課表</span><span class="s1">v9.1</span></p>
       </td>
     </tr>
     <tr>
@@ -210,7 +210,7 @@
         <p class="p4"><span class="s1">1234567 </span></p>
       </td>
       <td valign="middle" class="td4">
-        <p class="p4"><span class="s1"> </span></p>
+        <p class="p4"><span class="s1">55555 </span></p>
       </td>
       <td valign="middle" class="td3">
         <p class="p4"><span class="s1"> </span></p>
