--- a/class.html
+++ b/class.html
@@ -48,7 +48,7 @@
   <tbody>
     <tr>
       <td colspan="9" valign="middle" class="td1">
-        <p class="p2"><span class="s2">課表</span><span class="s1">v9.2</span></p>
+        <p class="p2"><span class="s2">課表</span><span class="s1">v9.3</span></p>
       </td>
     </tr>
     <tr>
@@ -184,7 +184,7 @@
         <p class="p4"><span class="s1"> </span></p>
       </td>
       <td valign="middle" class="td9">
-        <p class="p4"><span class="s1"> </span></p>
+        <p class="p4"><span class="s1">534123 </span></p>
       </td>
       <td valign="middle" class="td11">
         <p class="p5"><span class="s3"> </span><span class="s1">加班</span></p>
