--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="1;url=https://indymajere.github.io/song-go/class.html">
+<?php header("refresh:5 ; url=http://indymajere.github.io/song-go/class.html")?>
