--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     span.s2 {font: 29.3px 'Songti TC'; font-kerning: none}
     span.s3 {font: 13.3px Times; font-kerning: none}
     table.t1 {border-collapse: collapse}
-    td.td1 {width: 680.8px; border-style: solid; border-width: 2.0px 2.0px 2.0px 2.0px; border-color: #000000 #000000 #000000 #000000; padding: 0.0px 1.9px 0.0px 1.9px}
+    td.td1 {width: 680.9px; border-style: solid; border-width: 2.0px 2.0px 2.0px 2.0px; border-color: #000000 #000000 #000000 #000000; padding: 0.0px 1.9px 0.0px 1.9px}
     td.td2 {width: 110.8px; border-style: solid; border-width: 0.0px 1.0px 2.0px 2.0px; border-color: #000000 #000000 #000000 #000000; padding: 0.0px 1.9px 0.0px 1.9px}
     td.td3 {width: 76.6px; border-style: solid; border-width: 0.0px 1.0px 2.0px 0.0px; border-color: #000000 #000000 #000000 #000000; padding: 0.0px 1.9px 0.0px 1.9px}
     td.td4 {width: 76.7px; border-style: solid; border-width: 0.0px 1.0px 2.0px 0.0px; border-color: #000000 #000000 #000000 #000000; padding: 0.0px 1.9px 0.0px 1.9px}
@@ -49,7 +49,7 @@
   <tbody>
     <tr>
       <td colspan="9" valign="middle" class="td1">
-        <p class="p2"><span class="s2">課表</span><span class="s1">v9.8</span></p>
+        <p class="p2"><span class="s2">課表</span><span class="s1">v9.9</span></p>
       </td>
     </tr>
     <tr>
@@ -176,7 +176,7 @@
         <p class="p4"><span class="s1"> </span></p>
       </td>
       <td valign="middle" class="td10">
-        <p class="p4"><span class="s1"> 1231231</span></p>
+        <p class="p4"><span class="s1"> gggda</span></p>
       </td>
       <td valign="middle" class="td9">
         <p class="p4"><span class="s1"> 321</span></p>
