--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
         <p class="p5"><span class="s3"> </span><span class="s1">加班</span></p>
       </td>
       <td valign="middle" class="td12">
-        <p class="p6"><span class="s1">好好休息</span><span class="s3"> </span></p>
+        <p class="p6"><span class="s1">沒有要休息</span><span class="s3"> </span></p>
       </td>
     </tr>
     <tr>
