--- a/index.html
+++ b/index.html
@@ -12,12 +12,8 @@
     p.p2 {margin: 0.0px 0.0px 0.0px 0.0px; text-align: center; line-height: 41.0px; font: 29.3px 'Songti TC'; color: #000000; -webkit-text-stroke: #000000}
     p.p3 {margin: 0.0px 0.0px 0.0px 0.0px; text-align: center; line-height: 22.0px; font: 16.0px 'Songti TC'; color: #000000; -webkit-text-stroke: #000000}
     p.p4 {margin: 0.0px 0.0px 0.0px 0.0px; text-align: center; line-height: 15.0px; font: 13.3px Times; color: #000000; -webkit-text-stroke: #000000}
-    p.p5 {margin: 0.0px 0.0px 0.0px 0.0px; text-align: center; line-height: 18.0px; font: 13.3px Times; color: #000000; -webkit-text-stroke: #000000}
-    p.p6 {margin: 0.0px 0.0px 0.0px 0.0px; text-align: center; line-height: 18.0px; font: 13.3px 'Songti TC'; color: #000000; -webkit-text-stroke: #000000; min-height: 19.0px}
-    p.p7 {margin: 0.0px 0.0px 0.0px 0.0px; text-align: center; line-height: 15.0px; font: 13.3px 'Songti TC'; color: #000000; -webkit-text-stroke: #000000; min-height: 19.0px}
-    p.p8 {margin: 0.0px 0.0px 0.0px 0.0px; text-align: center; line-height: 15.0px; font: 13.3px Times; color: #000000; -webkit-text-stroke: #000000; min-height: 16.0px}
-    p.p9 {margin: 0.0px 0.0px 0.0px 0.0px; text-align: center; line-height: 18.0px; font: 13.3px 'Songti TC'; color: #000000; -webkit-text-stroke: #000000}
-    p.p10 {margin: 0.0px 0.0px 0.0px 0.0px; line-height: 24.0px; font: 21.3px Times; color: #000000; -webkit-text-stroke: #000000}
+    p.p5 {margin: 0.0px 0.0px 0.0px 0.0px; text-align: center; line-height: 18.0px; font: 13.3px 'Songti TC'; color: #000000; -webkit-text-stroke: #000000}
+    p.p6 {margin: 0.0px 0.0px 0.0px 0.0px; line-height: 24.0px; font: 21.3px Times; color: #000000; -webkit-text-stroke: #000000}
     span.s1 {font-kerning: none}
     span.s2 {font: 13.3px Times; font-kerning: none}
     table.t1 {border-collapse: collapse}
@@ -51,7 +47,7 @@
   <tbody>
     <tr>
       <td colspan="9" valign="middle" class="td1">
-        <p class="p2"><span class="s1">小松果課表v0.1</span></p>
+        <p class="p2"><span class="s1">小松果課表v0.2</span></p>
       </td>
     </tr>
     <tr>
@@ -106,7 +102,7 @@
         <p class="p4"><span class="s1"> </span></p>
       </td>
       <td valign="middle" class="td12">
-        <p class="p5"><span class="s1"> </span></p>
+        <p class="p4"><span class="s1"> </span></p>
       </td>
     </tr>
     <tr>
@@ -135,7 +131,8 @@
         <p class="p4"><span class="s1"> </span></p>
       </td>
       <td valign="middle" class="td12">
-        <p class="p6"><span class="s1"></span><br></p>
+        <p class="p5"><span class="s1"><br>
+</span></p>
       </td>
     </tr>
     <tr>
@@ -161,10 +158,11 @@
         <p class="p4"><span class="s1"> </span></p>
       </td>
       <td valign="middle" class="td11">
-        <p class="p7"><span class="s1"></span><br></p>
+        <p class="p5"><span class="s1"><br>
+</span></p>
       </td>
       <td valign="middle" class="td12">
-        <p class="p5"><span class="s1"> </span></p>
+        <p class="p4"><span class="s1"> </span></p>
       </td>
     </tr>
     <tr>
@@ -178,10 +176,12 @@
         <p class="p4"><span class="s1"> </span></p>
       </td>
       <td valign="middle" class="td10">
-        <p class="p8"><span class="s1"></span><br></p>
+        <p class="p4"><span class="s1"><br>
+</span></p>
       </td>
       <td valign="middle" class="td9">
-        <p class="p8"><span class="s1"></span><br></p>
+        <p class="p4"><span class="s1"><br>
+</span></p>
       </td>
       <td valign="middle" class="td10">
         <p class="p4"><span class="s1"> </span></p>
@@ -207,16 +207,20 @@
         <p class="p4"><span class="s1"> </span></p>
       </td>
       <td valign="middle" class="td4">
-        <p class="p8"><span class="s1"></span><br></p>
+        <p class="p4"><span class="s1"><br>
+</span></p>
       </td>
       <td valign="middle" class="td3">
-        <p class="p8"><span class="s1"></span><br></p>
+        <p class="p4"><span class="s1"><br>
+</span></p>
       </td>
       <td valign="middle" class="td4">
-        <p class="p8"><span class="s1"></span><br></p>
+        <p class="p4"><span class="s1"><br>
+</span></p>
       </td>
       <td valign="middle" class="td3">
-        <p class="p8"><span class="s1"></span><br></p>
+        <p class="p4"><span class="s1"><br>
+</span></p>
       </td>
       <td valign="middle" class="td5">
         <p class="p4"><span class="s1"> </span></p>
@@ -233,19 +237,19 @@
         <p class="p4"><span class="s1">12:10-13:00</span></p>
       </td>
       <td valign="middle" class="td3">
-        <p class="p9"><span class="s1">午休</span></p>
+        <p class="p5"><span class="s1">午休</span></p>
       </td>
       <td valign="middle" class="td4">
-        <p class="p9"><span class="s1">午休</span></p>
+        <p class="p5"><span class="s1">午休</span></p>
       </td>
       <td valign="middle" class="td3">
-        <p class="p9"><span class="s1">午休</span></p>
+        <p class="p5"><span class="s1">午休</span></p>
       </td>
       <td valign="middle" class="td4">
-        <p class="p9"><span class="s1">午休</span></p>
+        <p class="p5"><span class="s1">午休</span></p>
       </td>
       <td valign="middle" class="td3">
-        <p class="p9"><span class="s1">午休</span><span class="s2"> </span></p>
+        <p class="p5"><span class="s1">午休</span><span class="s2"> </span></p>
       </td>
       <td valign="middle" class="td5">
         <p class="p4"><span class="s1"> </span></p>
@@ -262,19 +266,23 @@
         <p class="p4"><span class="s1">13:10-14:00</span></p>
       </td>
       <td valign="middle" class="td9">
-        <p class="p7"><span class="s1"></span><br></p>
+        <p class="p5"><span class="s1"><br>
+</span></p>
       </td>
       <td valign="middle" class="td10">
-        <p class="p8"><span class="s1"></span><br></p>
+        <p class="p4"><span class="s1"><br>
+</span></p>
       </td>
       <td valign="middle" class="td9">
-        <p class="p8"><span class="s1"></span><br></p>
+        <p class="p4"><span class="s1"><br>
+</span></p>
       </td>
       <td valign="middle" class="td10">
-        <p class="p8"><span class="s1"></span><br></p>
+        <p class="p4"><span class="s1"><br>
+</span></p>
       </td>
       <td valign="middle" class="td9">
-        <p class="p5"><span class="s1"> </span></p>
+        <p class="p4"><span class="s1"> </span></p>
       </td>
       <td valign="middle" class="td11">
         <p class="p4"><span class="s1"> </span></p>
@@ -303,7 +311,8 @@
         <p class="p4"><span class="s1"> </span></p>
       </td>
       <td valign="middle" class="td9">
-        <p class="p6"><span class="s1"></span><br></p>
+        <p class="p5"><span class="s1"><br>
+</span></p>
       </td>
       <td valign="middle" class="td11">
         <p class="p4"><span class="s1"> </span></p>
@@ -517,6 +526,6 @@
     </tr>
   </tbody>
 </table>
-<p class="p10"><span class="s1"> </span></p>
+<p class="p6"><span class="s1"> </span></p>
 </body>
 </html>
